# personal-context-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLI.md  DATA_MODEL.md  DEMO.md  RELEASE_NOTES_v0.1.0.md  SAFETY.md
examples/: case-study-agent-handoff.md  diagnostics-report.md  sample-note.md
src/personal_context_router/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
