[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-context-router"
version = "0.1.0"
description = "Local-first context router for redacted, approved, task-scoped context packets."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Personal Context Router contributors"}
]
keywords = ["context", "agents", "privacy", "redaction", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/junbuilds96/personal-context-router"
Repository = "https://github.com/junbuilds96/personal-context-router"
Issues = "https://github.com/junbuilds96/personal-context-router/issues"

[project.scripts]
pcr = "personal_context_router.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
personal_context_router = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
